fix overflow bug

--- a/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/fields/content-type-field-dragabble-item/content-type-field-dragabble-item.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/fields/content-type-field-dragabble-item/content-type-field-dragabble-item.component.scss
@@ -28,7 +28,6 @@
     padding: $spacing-2 $spacing-3;
     display: flex;
     align-items: center;
-    flex-grow: 1;
     min-height: 73px;
 
     dot-icon {
@@ -70,7 +69,6 @@
     border-radius: $border-radius-sm;
     overflow: hidden;
     gap: $spacing-1;
-    min-height: 80px;
 
     &.open {
         overflow: visible;
